--- a/nlp.html
+++ b/nlp.html
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/roam/ad8914f2-0d4d-40b7-8063-c8b8096937f0'>Roam - NLP Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/roam/ad8914f2-0d4d-40b7-8063-c8b8096937f0'>Roam - NLP Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -283,7 +283,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pierce.workable.com/j/066F91BC6C'>Pierce Technology Corp - Jobs: NLP/ML Engineer - Apply online</a></h5> 
+<h5><a href='https://pierce.workable.com/j/066F91BC6C'>Pierce Technology Corp - Jobs: NLP/ML Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -307,7 +307,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
+<h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
 <p><span class="badge badge-light">New Zealand Auckland</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -317,12 +317,12 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-09-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
+<h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 21 Stunden ... Tomes GmbH has a job opening for Research Software Engineer - ML & NLP in 
 eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dmai/914f7f26-096c-402d-aa29-88b49037fa1f'>DMAI - Software Engineer, Speech/Natural Language Processing</a></h5> 
+<h5><a href='https://jobs.lever.co/dmai/914f7f26-096c-402d-aa29-88b49037fa1f'>DMAI - Software Engineer, Speech/Natural Language Processing</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-09-08</p>
 <hr/>
@@ -399,7 +399,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-08-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axur.workable.com/j/62624C2C7B'>Axur. Digital Risk Protection - Jobs: Machine Learning Analyst - NLP - Apply online</a></h5> 
+<h5><a href='https://axur.workable.com/j/62624C2C7B'>Axur. Digital Risk Protection - Jobs: Machine Learning Analyst - NLP - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-25</p>
 <hr/>
@@ -412,12 +412,12 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Our engineers and scientists work on technologies such as Deep Learning, 
 Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-globetech.icims.com/jobs/2540/nlp-engineer-with-italian/job'>Careers | NLP Engineer with Italian in Barcelona ... - GlobeTech</a></h5> 
+<h5><a href='https://careers-globetech.icims.com/jobs/2540/nlp-engineer-with-italian/job'>Careers | NLP Engineer with Italian in Barcelona ... - GlobeTech</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Italian in 
 Barcelona. Review all of the job details and apply today!</p>
@@ -435,7 +435,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AI-Adam/743999693407080-data-scientist-nlp'>AI-Adam Data Scientist - NLP | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AI-Adam/743999693407080-data-scientist-nlp'>AI-Adam Data Scientist - NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London, United Kingdom  London</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
